--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "cid-retrieval-metrics-api",
-  "version": "1.0.0",
+  "name": "@storacha/retrieval-testing-simple",
+  "version": "0.0.0",
   "description": "",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0 OR MIT",
   "dependencies": {
+    "@ipld/dag-json": "^10.2.3",
     "express": "^4.21.1",
+    "multiformats": "^13.3.1",
     "prom-client": "^15.1.3"
   },
   "devDependencies": {
